[gd_scene load_steps=30 format=2]

[ext_resource path="res://Screens/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/credits.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/narf.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/menu.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/play.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/title.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/tutorial.png" type="Texture" id=7]
[ext_resource path="res://Assets/Fonts/prstartk.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Assets/BGM/SolAndLunaCredits.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/Sounds/ui_select.wav" type="AudioStream" id=10]
[ext_resource path="res://Assets/Players/sol_crouch.png" type="Texture" id=11]
[ext_resource path="res://Assets/Players/luna_fall.png" type="Texture" id=12]
[ext_resource path="res://Assets/Players/sol_fall.png" type="Texture" id=13]
[ext_resource path="res://Assets/Players/luna_crouch.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sounds/ui_back.wav" type="AudioStream" id=15]
[ext_resource path="res://Assets/Sounds/ui_enter.wav" type="AudioStream" id=16]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.0431373, 0, 0.282353, 0.862745 )

[sub_resource type="DynamicFont" id=11]
size = 70
outline_size = 15
outline_color = Color( 0.113725, 0, 0.768627, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=12]
size = 30
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=13]
size = 45
outline_size = 5
outline_color = Color( 0.866667, 0.521569, 0.188235, 1 )
font_data = ExtResource( 8 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 8.0
margin_bottom = 8.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Graphics" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BG" type="TextureRect" parent="Graphics"]
margin_top = -8.0
margin_right = 1600.0
margin_bottom = 792.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="Graphics"]
margin_top = -8.0
margin_right = 1600.0
margin_bottom = 792.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NARF" type="TextureRect" parent="Graphics"]
margin_top = -8.0
margin_right = 1600.0
margin_bottom = 792.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="TextureRect" parent="Graphics"]
margin_right = 1600.0
margin_bottom = 800.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HowTo" type="TextureRect" parent="Graphics"]
margin_top = -8.0
margin_right = 1600.0
margin_bottom = 792.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="TextureRect" parent="Graphics"]
margin_right = 1600.0
margin_bottom = 800.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play" type="Button" parent="."]
margin_left = 1216.0
margin_top = 176.0
margin_right = 1504.0
margin_bottom = 288.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="howto" type="Button" parent="."]
margin_left = 1128.0
margin_top = 304.0
margin_right = 1504.0
margin_bottom = 368.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )

[node name="credits" type="Button" parent="."]
margin_left = 1168.0
margin_top = 376.0
margin_right = 1504.0
margin_bottom = 440.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )

[node name="HowTo" type="Panel" parent="."]
visible = false
margin_right = 1600.0
margin_bottom = 800.0
custom_styles/panel = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HowTo"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -550.0
margin_top = 72.0
margin_right = 550.0
margin_bottom = 224.0
custom_fonts/font = SubResource( 11 )
text = "HOW TO PLAY"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="HowTo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -495.0
margin_top = -144.0
margin_right = 495.0
margin_bottom = 245.0
custom_fonts/font = SubResource( 12 )
text = "Use WASD to move 
Sol, the Sun Cat!

Use ARROW KEYS to move
 Luna, the Moon Cat!

Press R anytime to 
restart the level!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sol" type="TextureRect" parent="HowTo"]
margin_left = 32.0
margin_top = 184.0
margin_right = 96.0
margin_bottom = 248.0
rect_scale = Vector2( 6, 6 )
texture = ExtResource( 13 )
flip_h = true

[node name="Luna" type="TextureRect" parent="HowTo"]
margin_left = 1176.0
margin_top = 320.0
margin_right = 1240.0
margin_bottom = 384.0
rect_scale = Vector2( 6, 6 )
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="HowTo"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -126.0
margin_top = -96.0
margin_right = 126.0
margin_bottom = -29.0
custom_fonts/font = SubResource( 13 )
text = "BACK"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Panel" parent="."]
visible = false
margin_right = 1600.0
margin_bottom = 800.0
custom_styles/panel = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Credits"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -550.0
margin_top = -5.04538
margin_right = 550.0
margin_bottom = 146.955
custom_fonts/font = SubResource( 11 )
text = "CREDITS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Credits"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -736.0
margin_top = -263.136
margin_right = 734.0
margin_bottom = 277.864
custom_fonts/font = SubResource( 12 )
text = "Made by Team NARF for the ArtCenter Game Jam 2021

PROGRAMERS
Ryan Lu
Samantha Macaraniag

LEVEL DESIGN
Kyle Shieh

ART DESIGN
Tiffany Book
Jiahn Chung

SOUND DESIGN
Jared Acosta
Devon Mamawag"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sol" type="TextureRect" parent="Credits"]
margin_left = 96.0
margin_top = 320.0
margin_right = 160.0
margin_bottom = 384.0
rect_scale = Vector2( 6, 6 )
texture = ExtResource( 11 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Luna" type="TextureRect" parent="Credits"]
margin_left = 1120.0
margin_top = 184.0
margin_right = 1184.0
margin_bottom = 248.0
rect_scale = Vector2( 6, 6 )
texture = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Credits"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -126.0
margin_top = -96.0
margin_right = 126.0
margin_bottom = -29.0
custom_fonts/font = SubResource( 13 )
text = "BACK"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundSelect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -5.0

[node name="SoundEnter" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -5.0

[node name="SoundBack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -5.0

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -5.0
autoplay = true

[node name="Timer" type="Timer" parent="."]
[connection signal="mouse_entered" from="play" to="." method="_on_play_mouse_entered"]
[connection signal="pressed" from="play" to="." method="_on_play_pressed"]
[connection signal="mouse_entered" from="howto" to="." method="_on_howto_mouse_entered"]
[connection signal="pressed" from="howto" to="." method="_on_howto_pressed"]
[connection signal="mouse_entered" from="credits" to="." method="_on_credits_mouse_entered"]
[connection signal="pressed" from="credits" to="." method="_on_credits_pressed"]
[connection signal="mouse_entered" from="HowTo/Back" to="." method="_on_Back_mouse_entered"]
[connection signal="pressed" from="HowTo/Back" to="." method="_on_Back_pressed"]
[connection signal="mouse_entered" from="Credits/Back" to="." method="_on_Back_mouse_entered"]
[connection signal="pressed" from="Credits/Back" to="." method="_on_Back_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
